# mle-uplift-final-project-2025

./: .env_template  .gitignore  README.md  final_project.ipynb  final_project_template.ipynb  pyproject.toml  requirements.txt  run_mlflow.sh  uplift_fp_data.csv  utils.py
