[project]
name = "mle-uplift-final-project"
version = "0.1.0"
requires-python = "==3.10.13"
dependencies = [
    "alembic==1.16.2",
    "boto3>=1.42.55",
    "catboost==1.2.8",
    "causalml==0.15.5",
    "cloudpickle==3.0.0",
    "colorlog==6.9.0",
    "dill==0.3.8",
    "dotenv>=0.9.9",
    "forestci==0.6.0",
    "graphviz==0.20.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.3",
    "mlflow>=3.10.0",
    "numba==0.64.0",
    "numpy==2.2.6",
    "optuna==4.4.0",
    "pandas==2.2.3",
    "plotly==5.20.0",
    "psycopg2-binary>=2.9.11",
    "scikit-learn==1.6.1",
    "scikit-uplift==0.5.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "shap>=0.46.0",
    "statsmodels==0.14.6",
    "xgboost==2.0.3",
]
